--- a/skeleton/game.vcxproj
+++ b/skeleton/game.vcxproj
@@ -257,9 +257,12 @@
     <ClCompile Include="CircleGenerator.cpp" />
     <ClCompile Include="Diana.cpp" />
     <ClCompile Include="Firework.cpp" />
+    <ClCompile Include="ForceGenerator.cpp" />
     <ClCompile Include="GaussianParticleGenerator.cpp" />
+    <ClCompile Include="GravityForceGenerator.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Particle.cpp" />
+    <ClCompile Include="ParticleForceRegistry.cpp" />
     <ClCompile Include="ParticleGenerator.cpp" />
     <ClCompile Include="PartycleSystem.cpp" />
     <ClCompile Include="Proyectil.cpp" />
@@ -274,8 +277,11 @@
     <ClInclude Include="core.hpp" />
     <ClInclude Include="Diana.h" />
     <ClInclude Include="Firework.h" />
+    <ClInclude Include="ForceGenerator.h" />
     <ClInclude Include="GaussianParticleGenerator.h" />
+    <ClInclude Include="GravityForceGenerator.h" />
     <ClInclude Include="Particle.h" />
+    <ClInclude Include="ParticleForceRegistry.h" />
     <ClInclude Include="ParticleGenerator.h" />
     <ClInclude Include="PartycleSystem.h" />
     <ClInclude Include="Proyectil.h" />
