--- a/skeleton/game.vcxproj
+++ b/skeleton/game.vcxproj
@@ -304,6 +304,7 @@
     <ClCompile Include="RigidExplosionGenerator.cpp" />
     <ClCompile Include="RigidForceGenerator.cpp" />
     <ClCompile Include="RigidGaussianParticleGenerator.cpp" />
+    <ClCompile Include="RigidGravityForceGenerator.cpp" />
     <ClCompile Include="RigidParticle.cpp" />
     <ClCompile Include="RigidParticleForceRegistry.cpp" />
     <ClCompile Include="RigidParticleGenerator.cpp" />
@@ -337,6 +338,7 @@
     <ClInclude Include="RigidExplosionGenerator.h" />
     <ClInclude Include="RigidForceGenerator.h" />
     <ClInclude Include="RigidGaussianParticleGenerator.h" />
+    <ClInclude Include="RigidGravityForceGenerator.h" />
     <ClInclude Include="RigidParticle.h" />
     <ClInclude Include="RigidParticleForceRegistry.h" />
     <ClInclude Include="RigidParticleGenerator.h" />
