--- a/skeleton/game.vcxproj.filters
+++ b/skeleton/game.vcxproj.filters
@@ -22,7 +22,6 @@
     <ClCompile Include="ForceGenerator.cpp" />
     <ClCompile Include="ParticleForceRegistry.cpp" />
     <ClCompile Include="GravityForceGenerator.cpp" />
-    <ClCompile Include="ParticleDragGenerator.cpp" />
     <ClCompile Include="WindGenerator.cpp" />
     <ClCompile Include="WhirlwindGenerator.cpp" />
     <ClCompile Include="ExplosionGenerator.cpp" />
@@ -37,6 +36,8 @@
     <ClCompile Include="RigidGaussianParticleGenerator.cpp" />
     <ClCompile Include="RigidExplosionGenerator.cpp" />
     <ClCompile Include="RigidGravityForceGenerator.cpp" />
+    <ClCompile Include="ParticleDragGenerator.cpp" />
+    <ClCompile Include="RigidWindGenerator.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="core.hpp" />
@@ -60,7 +61,6 @@
     <ClInclude Include="ForceGenerator.h" />
     <ClInclude Include="ParticleForceRegistry.h" />
     <ClInclude Include="GravityForceGenerator.h" />
-    <ClInclude Include="ParticleDragGenerator.h" />
     <ClInclude Include="WindGenerator.h" />
     <ClInclude Include="WhirlwindGenerator.h" />
     <ClInclude Include="ExplosionGenerator.h" />
@@ -75,6 +75,8 @@
     <ClInclude Include="RigidGaussianParticleGenerator.h" />
     <ClInclude Include="RigidExplosionGenerator.h" />
     <ClInclude Include="RigidGravityForceGenerator.h" />
+    <ClInclude Include="ParticleDragGenerator.h" />
+    <ClInclude Include="RigidWindGenerator.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Render">
